# rugen

./: .gitattributes  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/rugen/: Cargo.toml
crates/rugen-cli/: Cargo.toml
crates/rugen-cli/src/: main.rs
crates/rugen/src/: lib.rs
examples/: explicit.rn  implicit.rn  rugen-test.rn
