[workspace]
members = ["crates/*"]
resolver = "3"
default-members = ["crates/rugen-cli"]

[workspace.package]
edition = "2024"
repository = "https://github.com/hardliner66/rugen"
readme = "README.md"
license-file = "LICENSE"
authors = ["Steve Biedermann <hardliner66@gmail.com>"]
version = "0.12.0"

[profile.dev.package."*"]
opt-level = 3
