[package]
name = "rugen-cli"
description = "A command-line tool for generating random data based on a data description written in Rune."
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
authors.workspace = true
readme.workspace = true
default-run = "rugen"

[[bin]]
name = "rugen"
path = "src/main.rs"

[dependencies]
rugen = { version = "0.15.0", path = "../rugen", features = ["fmt"] }
anyhow = "1.0.102"
clap = { version = "4.0.32", features = ["derive"] }
rune-modules = { version = "0.14.1", features = ["full"] }
serde_json = "1.0.149"
