[package]
name = "rugen"
description = "A library for generating random data based on a data description written in Rune."
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
rune = "0.14.1"
rand = "0.10.0"
thiserror = "2.0.18"

[features]
allow_empty = []
